package oop.erbe.aufgabe5;

public abstract class Form {
    protected abstract double berechneUmfang();
}
